Before cleaning up edit.